--- a/vignettes/cervical_cancer_aih_example.Rmd
+++ b/vignettes/cervical_cancer_aih_example.Rmd
@@ -8,9 +8,7 @@ vignette: >
 ---
 
 ```{r, include = FALSE}
-knitr::opts_chunk$set(collapse = TRUE,
-                      comment = "#>",
-                      eval = FALSE)
+knitr::opts_chunk$set(collapse = TRUE, comment = "#>", eval = FALSE)
 library(tidyverse)
 
 # To run all analysis change "eval = FALSE" in line 14 to "eval = TRUE" e follow all steps bellow.
@@ -155,7 +153,7 @@ n_aih_final
 The table bellow shows the number of AIH by ICD category. The table is useful for identifying the most common ICD codes and for understanding the distribution of AIH by ICD.
 
 ```{r table_icd}
-table_aih_icd <- aih$diag_list$ICD_base_table 
+table_aih_icd <- aih$diag_list$ICD_base_table
 ```
 
 ```{r p_table_icd , eval=TRUE}	
@@ -191,8 +189,8 @@ The table bellow shows the number of AIH by year of hospitalization. It is usefu
 AIH over time and the inconsistencies in the year of hospitalization data.
 
 ```{r table_year}
-table_aih_year <- aih$diag_list$admission_year_table %>% 
-    replace_na(list(ano_internacao = 0))
+table_aih_year <- aih$diag_list$admission_year_table %>%
+  replace_na(list(ano_internacao = 0))
 ```
 
 ```{r p_table_year , eval=TRUE}
@@ -291,7 +289,8 @@ n_gt_max_age_zip_true
 
 ```{r n_after_sex_zip_true}
 n_rm_sex_zip_true <- aih_merged_zip_true$diag_list$lt_sex
-```
+``
+`
 ```{r p_n_after_sex_zip_true, eval=TRUE}
 n_rm_sex_zip_true
 ```
@@ -373,7 +372,8 @@ n_gt_max_age_zip_false
 
 ```{r n_after_sex_zip_false}
 n_rm_sex_zip_false <- aih_merged_zip_false$diag_list$lt_sex
-```
+`
+``
 ```{r p_n_after_sex_zip_false, eval=TRUE}
 n_rm_sex_zip_false
 ```
@@ -451,7 +451,8 @@ plot_sih_zip_true <- plot_patient_count(
   age_type = "age_attendance",
   include_label = FALSE
 )
-```
+``
+`
 ```{r plot_zip_true , eval=TRUE, fig.width = 7, fig.height = 3.5, fig.align = "center"}	
 plot_sih_zip_true
 ```
@@ -470,7 +471,8 @@ plot_sih_zip_false <- plot_patient_count(
   age_type = "age_attendance",
   include_label = FALSE
 )
-```
+`
+``
 ```{r plot_zip_false , eval=TRUE, fig.width = 7, fig.height = 3.5, fig.align = "center"}	
 plot_sih_zip_false
 ```
@@ -482,8 +484,10 @@ On the plot bellow we can see the difference in the number of unique patients wh
 ```{r plot_number_patients, eval=TRUE, fig.width = 7, fig.height = 3.5, fig.align = "center", echo=FALSE}
 combined_plot <- plot_sih_zip_true$data %>%
   mutate(group = "DT_BIRTH + SEX + ZIP") %>%
-  rbind(plot_sih_zip_false$data %>%
-          mutate(group = "DT_BIRTH + SEX")) %>%
+  rbind(
+    plot_sih_zip_false$data %>%
+      mutate(group = "DT_BIRTH + SEX")
+  ) %>%
   ggplot(aes(
     x = as.numeric(factor(ano_x_value)),
     y = n,
@@ -492,7 +496,8 @@ combined_plot <- plot_sih_zip_true$data %>%
   )) +
   geom_line(linewidth = 1) +
   geom_point(size = 2) +
-  theme_minimal() + theme(
+  theme_minimal() +
+  theme(
     panel.background = element_blank(),
     axis.line = element_line(color = "black"),
     axis.text = element_text(color = "black"),
@@ -502,13 +507,59 @@ combined_plot <- plot_sih_zip_true$data %>%
     legend.position = "bottom",
     legend.direction = "horizontal"
   ) +
-  labs(x = "Year of hospitalization", y = "Number of patients", color = "Patient count method") +
+  labs(
+    x = "Year of hospitalization",
+    y = "Number of patients",
+    color = "Patient count method"
+  ) +
   scale_x_continuous(
     breaks = 1:length(unique(plot_sih_zip_true$data$ano_x_value)),
     labels = unique(plot_sih_zip_true$data$ano_x_value)
   )
 
 combined_plot
+```
+
+### 6.3. Plot by Top 4 Procedures
+
+The plot below shows the number of patients with pancreatic cancer by procedure performed, considering scenario 1. For this example, we used the top 4 most frequent procedures.
+
+First, we need to create a vector with the top 4 most frequent procedures to filter the data for plotting.
+
+```{r top_procedures}
+top_procedures <- aih_merged_zip_true$SIH_table %>%
+  group_by(PROC_REA) %>%
+  summarise(n = n()) %>%
+  arrange(desc(n)) %>%
+  slice(1:4) %>%
+  pull(PROC_REA)
+
+# Adjusting the procedure labels according to the SIGTAP table.
+
+procedure_labels <- c(
+  "0409060038" = "Type 3 excision of the uterine cervix",
+  "0409060119" = "Hysterectomy with adnexectomy",
+  "0409060135" = "Total hysterectomy",
+  "0416060064" = "Total extended hysterectomy"
+)
+
+plot_proced_sih_zip_true <- aih_merged_zip_true$SIH_table %>%
+  filter(PROC_REA %in% top_procedures) %>%
+  mutate(
+    PROC_REA = recode(trimws(PROC_REA), !!!procedure_labels)
+  ) %>%
+  plot_patient_count(
+    method = "AIH",
+    y_type = "number",
+    group = "procedure",
+    age_group = "adult",
+    age_type = "age_attendance",
+    include_label = FALSE
+  )
+```
+
+```{r plot_procedure , eval=TRUE, fig.width = 7, fig.height = 3.5, fig.align = "center"}	
+plot_proced_sih_zip_true
 ```
 
 ## 7. Saving objects
